stacks/data-pipeline/terraform/vpc_endpoint.tf
data "aws_region" "current" {}

resource "aws_vpc_endpoint" "pracmig" {
  service_name       = "com.amazonaws.${data.aws_region.current.name}.datasync"
  vpc_id             = aws_vpc.main.id
//  security_group_ids = [aws_security_group.example.id]
  subnet_ids          = [aws_subnet.main.id]
  vpc_endpoint_type  = "Interface"
  security_group_ids = [aws_security_group.test_pracmig_vpc_endpoint_to_storage_sg.id]
}
